# DiffSynth-Studio

./: .gitignore  Version.md  WANDB_IMPLEMENTATION.md  ar_batch_inference.py  ar_batch_inference_inter.py  batch_inference.py  gradio_wan_video.py  pth_analyzer.py  pyproject.toml  test_wandb_integration.py  vbench.py
diffsynth/configs/: model_configs.py  vram_management_module_maps.py
diffsynth/core/attention/: __init__.py  flex_attention.py
diffsynth/core/data/: __init__.py  operators.py  unified_dataset.py  video_dataset.py
diffsynth/core/loader/: model.py
diffsynth/diffusion/: base_pipeline.py  logger.py  loss.py  parsers.py  runner.py  training_module.py
diffsynth/models/: model_loader.py  wan_video_dit.py  wan_video_mllm_encoder.py  wan_video_mllm_mask.py
diffsynth/pipelines/: wan_video.py  wan_video_autoregressive.py  wan_video_autoregressive_inter.py  wan_video_inter.py  wan_video_inter_2.py  wan_video_inter_3.py  wan_video_slim.py
diffsynth/utils/: README_PTH_ANALYZER.md
diffsynth/utils/data/: __init__.py  mllm_preprocessing.py
diffsynth/utils/state_dict_converters/: wan_video_mllm_encoder.py
docs/en/Training/: Supervised_Fine_Tuning.md
docs/zh/Training/: Supervised_Fine_Tuning.md
examples/wanvideo/: inference_mllm.py
examples/wanvideo/model_training/: QUICKSTART_WANDB.md  README_wandb.md  distributed.yaml  distributed_eval.yaml  precheck_mllm_dataset.py  train.py  train_mllm.py  train_mllm.sh  train_mllm_inter.py  train_mllm_stage1.sh  train_mllm_stage1_distributed.sh  train_mllm_stage2.sh  train_mllm_stage2_distributed.sh  (+1 more)
(+3 files in other folders)
