[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diffsynth"
version = "2.0.0"
description = "Enjoy the magic of Diffusion models!"
authors = [{name = "ModelScope Team"}]
license = {text = "Apache-2.0"}
requires-python = ">=3.10,<3.11"
dependencies = [
    "torch==2.6.0",
    "torchvision",
    "transformers",
    "imageio",
    "imageio[ffmpeg]",
    "safetensors",
    "einops",
    "sentencepiece",
    "protobuf",
    "modelscope",
    "ftfy",
    "pandas",
    "accelerate",
    "peft",
    "datasets",
    "pyarrow==18.0.0",
    "diffusers>=0.36.0",
    "qwen-vl-utils>=0.0.14",
    "deepspeed>=0.18.3",
    "nvitop>=1.6.1",
    "ipykernel>=7.1.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.setuptools.packages.find]

[tool.setuptools]
include-package-data = true
